# Drawing-Tablet-Device-Driver

./: .gitignore  Makefile  cdev_controller.c  cdev_controller.h  cursor_control.c  cursor_control.h  data_parsing.c  data_parsing.h  hello.c  input_events.c  input_events.h  ioctl.c  ioctl.h  proc_file_controller.c  proc_file_controller.h  tablet-datasheet.txt  tablet.h  usb_driver.c  usb_driver.h
user_space_application/: CMakeLists.txt  cdev_reader.c  cdev_reader.h  key_converter.c  key_converter.h  main.c  tabbed_window.c  tabbed_window.h
